// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrMetaDirective ngOnChanges when there is a template should surround the template with meta 1`] = `
<div
  id="root3"
>
  
  <span />
  <span />
</div>
`;

exports[`BrMetaDirective ngOnDestroy should clear the container 1`] = `
<div
  id="root5"
>
  
</div>
`;
